# pkg_wordslookup

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pkg_wordslookup/: __init__.py  pkg_wordslookup.py
tests/: test_pkg_wordslookup.py  test_txt.txt
